--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/bgschiller/recipes/issues"
   },
-  "homepage": "https://github.com/bgschiller/recipes"
+  "homepage": "https://github.com/bgschiller/recipes",
+  "dependencies": {
+    "redux": "^3.0.4",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.1.21",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-2": "^6.1.18",
+    "webpack": "^1.12.6"
+  }
 }
